Thu Jun 12 12:28:40 2008  Stefan Westerfeld  <stefan@space.twc.de>

	* NEWS: Some fixes due to review from Tim.

Wed Jun 11 17:25:26 2008  Stefan Westerfeld  <stefan@space.twc.de>

	* data/beast.desktop.in: Improved Category entry with changes
	from Debian. Now includes Audio, Midi and Sequencer categories.

Wed Jun 11 15:17:37 2008  Stefan Westerfeld  <stefan@space.twc.de>

	* NEWS: Include changes between 0.7.1 and 0.7.2.

2008-06-04 23:52:21  Tim Janik  <timj@gtk.org>

	* configure.in: renamed bse*sample*dir variables to be less ambiguous.

	* data/Makefile.am: added versioned sample dir to search path.

	* library/samples/Makefile.am: renamred variables accordingly.

2008-06-04 22:12:00  Tim Janik  <timj@gtk.org>

	* configure.in: updated version to 0.7.2.

2008-05-12 18:01:32  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/scripts/retrokit.sh: Improved Retrokit Acoustic Drumkit.

2008-04-27 18:39:56  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsewavetool.cc: Added chunk selection options (like
	--chunk-key) to upsampling and downsampling commands.

2008-03-15 09:49:29  Stefan Westerfeld  <stefan@space.twc.de>

	* bse/bsecategories.c:  
	* bse/bseutils.c: Use BIRNET_PRETTY_FUNCTION instead of G_GNUC_PRETTY_FUNCTION.

2008-03-16 10:07:23  Stefan Westerfeld  <stefan@space.twc.de>

	* docs/Makefile.am:
	* docs/bsewavetool.1.doxi: Added bsewavetool man page, see bug #437469.

2008-03-16 10:35:29  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/scripts/Makefile.am:
	* tools/scripts/retrokit.sh: Added retrokit.sh.

2008-03-15 13:59:18  Stefan Westerfeld  <stefan@space.twc.de>

	* library/samples/retrokit.bsewave: Added Retro Acoustic Drumkit with
	GM Layout.

2008-03-16 10:27:02  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/Makefile.am: Install bsewavetool, since it has a manual page
	now.

2008-01-24 22:37:55  Tim Janik  <timj@gtk.org>

	* autogen.sh: removed automake max-version check because automake-1.10